.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:03:21 **** Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:21: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   strcat(uid,(char*)count);
                     ^~~~~
Finished building: ../src/Assignment2.cpp
 
Building target: Assignment2
Invoking: GCC C++ Linker
g++  -o "Assignment2"  ./src/Assignment2.o ./src/LL_IMP.o ./src/PQ_IMP.o   
Finished building target: Assignment2
 
13:04:34 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:21: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   strcat(uid,(char*)count);
                     ^~~~~
Finished building: ../src/Assignment2.cpp
 
Building target: Assignment2
Invoking: GCC C++ Linker
g++  -o "Assignment2"  ./src/Assignment2.o ./src/LL_IMP.o ./src/PQ_IMP.o   
Finished building target: Assignment2
 
13:05:43 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:21: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   strcat(uid,(char*)count);
                     ^~~~~
../src/Assignment2.cpp: In member function ‘int Patient::getUID() const’:
../src/Assignment2.cpp:92:30: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  int getUID() const { return uid; }
                              ^~~
make: *** [src/Assignment2.o] Error 1
src/subdir.mk:24: recipe for target 'src/Assignment2.o' failed
13:06:18 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:21: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   strcat(uid,(char*)count);
                     ^~~~~
Finished building: ../src/Assignment2.cpp
 
Building target: Assignment2
Invoking: GCC C++ Linker
g++  -o "Assignment2"  ./src/Assignment2.o ./src/LL_IMP.o ./src/PQ_IMP.o   
Finished building target: Assignment2
 
13:06:23 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
make: Nothing to be done for 'all'.
13:12:35 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:35: error: cannot convert ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘const char*’ for argument ‘2’ to ‘char* strcat(char*, const char*)’
   strcat(uid,std::to_string(count));
                                   ^
make: *** [src/Assignment2.o] Error 1
src/subdir.mk:24: recipe for target 'src/Assignment2.o' failed
13:14:23 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:24: error: incompatible types in assignment of ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘char [50]’
   uid = to_string(count);
                        ^
src/subdir.mk:24: recipe for target 'src/Assignment2.o' failed
make: *** [src/Assignment2.o] Error 1
13:15:13 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:30: error: cannot convert ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘const char*’ for argument ‘2’ to ‘char* strcpy(char*, const char*)’
   strcpy(uid,to_string(count));
                              ^
src/subdir.mk:24: recipe for target 'src/Assignment2.o' failed
make: *** [src/Assignment2.o] Error 1
13:15:52 **** Incremental Build of configuration Release for project Assignment2 ****
make all 
Building file: ../src/Assignment2.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment2.d" -MT"src/Assignment2.o" -o "src/Assignment2.o" "../src/Assignment2.cpp"
../src/Assignment2.cpp: In member function ‘void Patient::accept()’:
../src/Assignment2.cpp:44:28: error: array must be initialized with a brace-enclosed initializer
   char temp[50] = to_string(count);
                   ~~~~~~~~~^~~~~~~
src/subdir.mk:24: recipe for target 'src/Assignment2.o' failed
make: *** [src/Assignment2.o] Error 1
